--- a/styles/media.css
+++ b/styles/media.css
@@ -1,7 +1,5 @@
 @media (max-width: 1250px) {
-   section {
-      padding: 60px 15% 60px;
-    }
+
     .header{
        padding: 1.3rem;
     }
@@ -42,7 +40,7 @@
       position: absolute;
       width: 100%;
       top: 0;
-      right: 100%;
+      left: 100%;
       height: 100vh;
       backdrop-filter: blur(30px);
       transition: all .7s ease-in-out;
@@ -52,7 +50,7 @@
       
    }
    .opens{
-      right:0;
+      left:0;
    }
    .navlinks a{
       font-size: 1.6rem ;
@@ -72,7 +70,7 @@
       max-width: 350px;
      }
    .header{
-      padding: 0.9rem;
+      padding: 1rem;
    }
    .scroll{
       padding:0.7rem 0.9rem ;
@@ -172,9 +170,7 @@
 }
 @media (max-width: 500px){
   
-   section {
-      padding: 50px 10% 50px;
-    }
+   
    .home{
       height: 90vh;
    }
